--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -13,9 +13,11 @@
   color: #000;
   position: relative;
   min-width: 320px;
+  max-width: 1920px;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  margin: 0 auto;
 }
 
 .title {
