--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -88,7 +88,7 @@
     align-items: center;
   }
 
-  .footer__list_item:last-of-type {
+  .footer__list-item:last-of-type {
     margin-top: 8px;
   }
 
