--- a/src/components/main/techs/techs.css
+++ b/src/components/main/techs/techs.css
@@ -40,7 +40,7 @@
   list-style-type: none;
 }
 
-.techs__list_item {
+.techs__list-item {
   font-size: 14px;
   font-weight: 400;
   line-height: 17px;
