--- a/src/components/menu-modal/menu-modal.css
+++ b/src/components/menu-modal/menu-modal.css
@@ -1,3 +1,11 @@
+.menu-modal-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 .menu-modal {
   position: fixed;
   z-index: 1;
@@ -16,7 +24,7 @@
   position: absolute;
   top: 25px;
   right: 25px;
-  background-image: url('../../../images/close-button.svg');
+  background-image: url('../../images/close-button.svg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
