--- a/src/components/register/register.css
+++ b/src/components/register/register.css
@@ -105,24 +105,18 @@
 }
 
 .register__button:disabled {
-  background: transparent;
-  color: rgba(255, 255, 255, .5);
-  border: 1px solid rgba(255, 255, 255, .5);
+  opacity: 8;
+  background-color: transparent;
+  color: #000;
+  border: 1px solid #3e3e3e99;
+  cursor: not-allowed;
 }
 
 .register__input-error {
-  color: rgba(255, 25, 0, .7);
-  font-size: 12px;
-  line-height: normal;
-}
-
-.register__input_error-frame {
-  border-color: rgba(255, 25, 0, .7);
-}
-
-.register__input_error-frame:focus {
-  border: 0;
-  outline-color: rgba(255, 25, 0, .7);
+  font-size: 10px;
+  font-weight: 400;
+  line-height: 12px;
+  color: #EE3465;
 }
 
 .register__link {
