feat: add films query with beatfilms api, preloader, movies errors, useResize hook

--- a/src/components/main/techs/techs.css
+++ b/src/components/main/techs/techs.css
@@ -78,7 +78,7 @@
     margin-bottom: 90px;
   }
 
-  .techs__list_item {
+  .techs__list-item {
     font-size: 12px;
     line-height: 15px;
     width: 84px;
