--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -1,6 +1,15 @@
 @import url(../../vendor/normalize.css);
 @import url(../../vendor/fonts/fonts.css);
 
+.root {
+  display: flex;
+  flex-direction: column;
+  min-width: 320px;
+  max-width: 1920px;
+  min-height: 100vh;
+  margin: 0 auto;
+}
+
 .page {
   font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
   -moz-osx-font-smoothing: grayscale;
@@ -12,12 +21,6 @@
   background-color: #fff;
   color: #000;
   position: relative;
-  min-width: 320px;
-  max-width: 1920px;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  margin: 0 auto;
 }
 
 .title {
