--- a/src/components/movies/movies-card/movies-card.css
+++ b/src/components/movies/movies-card/movies-card.css
@@ -5,6 +5,10 @@
 }
 
 .movies-card__title {
+  max-width: 275px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
   margin: 0;
   margin-top: 14px;
   margin-left: 14px;
@@ -39,6 +43,12 @@
   background-size: 10px 13px;
   background-position: center;
   background-repeat: no-repeat;
+  transition: all .3s ease-in-out;
+}
+
+.movies-card__button_active {
+  background-color: #2BE080;
+  background-image: url(../../../images/save-icon-active.svg);
 }
 
 .movies-card__button:hover {
@@ -69,5 +79,9 @@
   .movies-card__image {
     width: 300px;
     height: 168px;
+  }
+
+  .movies-card__title {
+    max-width: 235px;
   }
 }
