--- a/src/components/movies/search-form/search-form.css
+++ b/src/components/movies/search-form/search-form.css
@@ -80,6 +80,14 @@
   opacity: .8;
 }
 
+.search-form__error {
+  margin-top: 40px;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 12px;
+  color: #EE3465;
+}
+
 @media screen and (max-width: 1279px) {
   .search-form {
     margin-top: 86px;
