--- a/src/components/movies/movies.css
+++ b/src/components/movies/movies.css
@@ -2,7 +2,9 @@
   width: 100%;
 }
 
-.movies__error-wrapper {
+.movies__error-message {
+  width: 100%;
+  margin: 0;
   margin-bottom: 20px;
   display: flex;
   justify-content: center;
@@ -11,14 +13,4 @@
   font-weight: 400;
   line-height: 12px;
   color: #EE3465;
-}
-
-.movies__error-message {
-  max-width: 640px;
-}
-
-@media screen and (max-width: 767px) {
-  .movies__error-message {
-    max-width: 290px;
-  }
 }
